--- a/JuliaSignalProcessingSample/AudioProcessing.ipynb
+++ b/JuliaSignalProcessingSample/AudioProcessing.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -33,13 +33,19 @@
    "source": [
     "L = stream.blocksize\n",
     "fs = stream.samplerate\n",
+    "n = 0\n",
     "for i in 1:100\n",
     "    inbuff = read(stream, L)\n",
-    "    indata = convert(Array{Float32}, inbuff.data[:, 1])\n",
-    "    outdata = indata * sin.(2π*10*L/fs)\n",
-    "    outbuff = SampledSignals.SampleBuf(outdata, fs)\n",
+    "    audiodata = convert(Array{Float32}, inbuff.data[:, 1])\n",
+    "    \n",
+    "    for j in 1:L\n",
+    "        audiodata[j] = audiodata[j]*sin(2π*5.0*n/fs)\n",
+    "        n += 1\n",
+    "    end\n",
+    "    \n",
+    "    outbuff = SampledSignals.SampleBuf(audiodata, fs)\n",
     "    write(stream, outbuff, L)\n",
-    "end "
+    "end"
    ]
   }
  ],
